Co-authored-by: alexbryw <alexbryw@gmail.com> Co-authored-by: David Jensen <Tsourdox@icloud.com> Co-authored-by: Anne-Lie Bäck <a-l.back@outlook.com>

--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,7 @@ dist
 .tern-port
 
 # exclude everything in folder
-server/uploads/*
+# server/uploads/*
 
 # exception to the rule
-!server/uploads/.gitkeep 
+# server/uploads/.gitkeep 
